Fix Woo 10.4 pickup location fields alignment in checkout block. Reflect updates to the order status when saving shipments within edit order UI.

--- a/assets/js/blocks/checkout-pickup-location-select/slotfills/style.scss
+++ b/assets/js/blocks/checkout-pickup-location-select/slotfills/style.scss
@@ -46,6 +46,8 @@
     gap: 0 $gap;
 
     .wc-block-components-text-input {
+      margin-top: 0;
+
       &:first-child {
         flex-grow: 3;
       }
